fix dialog bg color in dark mode

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -37,6 +37,10 @@
   filter: invert();
 }
 
+dialog {
+  background-color: var(--lighter-gray);
+}
+
 .btn:hover,
 .btn:focus,
 .btn:active,
